--- a/WebAppRest/.settings/org.eclipse.wst.common.component
+++ b/WebAppRest/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,12 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="FoodClient-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/FoodClient/FoodClient">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="YummlyAdapter-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/FoodService/FoodService">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="RESTService"/>
         <property name="java-output-path" value="/WebAppRest/target/classes"/>
     </wb-module>
