--- a/WebAppRest/.settings/org.eclipse.wst.common.component
+++ b/WebAppRest/.settings/org.eclipse.wst.common.component
@@ -13,6 +13,9 @@
         <dependent-module archiveName="YummlyAdapter-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/FoodService/FoodService">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="CaloriesCalculatorClient-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/CaloriesCalculatorClient/CaloriesCalculatorClient">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="RESTService"/>
         <property name="java-output-path" value="/WebAppRest/target/classes"/>
     </wb-module>
