--- a/WebAppRest/src/main/webapp/template/show-person-template.html
+++ b/WebAppRest/src/main/webapp/template/show-person-template.html
@@ -1,44 +1,68 @@
 <script type="text/template" id="show-person-template">
-		<a href="#" class="btn"><i class="icon-arrow-left"></i> Back to person list</a>
-		<br/><br/>
-		<center><h2>
-			<%= person.get('firstname') + " " + person.get('lastname') + " (" + person.get('birthdate') + ")" %>
-		</h2></center>
-
-		<legend>Current Health Profile</legend>
-		<div class="row-fluid">
-		  <center>
-		  <div class="well" style="margin-bottom:10px; padding-bottom:28px">
-				<div class="span3">
-				  <p class="lead">Weight: <%= person.get('weight') + " kg" %></p>
-				</div>
-				<div class="span3">
-					<p class="lead">Height: <%= person.get('height') + " m" %></p>
-				</div>
-				<div class="span3">
-					<p class="lead">BMI: <%= person.get('bmi') + " kg/m<sup>2</sup>" %></p>
-				</div>
-				<div class="span3">
-					<a href="#/editPerson/<%= person.get('person_id') %>/editHealthProfile" class="btn btn-success">
-								<i class="icon-plus icon-white"></i> New Health Profile
-					</a>
-				</div>
-			</div>
-			</center>
+	<a href="#" class="btn"><i class="icon-arrow-left"></i> Back to person list</a>
+	<br/><br/>
+	<div style="position:relative;text-align:center;">
+		<h2>
+			<%= person.get('firstname') + " " + person.get('lastname') + 
+				" (" + person.get('birthdate') + ")" %>
+		</h2>
+		<div class="show-gender-icon">
+		<% if (person.get('sex') == 1) { %>
+			<img src="img/male_icon.png"/>
+		<% } else { %>
+			<img src="img/female_icon.png"/>
+		<% } %>
 		</div>
-		
-		<br/>
+	</div>
 
-		<br/>
+	<legend>Current Health Profile</legend>
+	<div class="row-fluid" id="hpinformation">
+		<div class="span4" style="position:relative">
+			<p class="lead"><b>Calories Needed</b>: 2500 kcal
+				<img src="img/fire.png" style="height:30px;margin-bottom: 10px;">
+			</p>
+			<hr/>
+			<p class="lead"><b>BMR</b>: 1500 kcal</p>
+			<p class="lead"><b>Ideal Weight</b>:  50kg</p>
+			<p class="lead"><b>Ideal Bmi</b>: 21.5 kg/m<sup>2</sup> </p>
+		</div>
+		<div class="span1"></div>
+		<div class="span4" style="position:relative;">
+			<img src="img/human.png" style="height:350px;"/>
+		  <p class="lead"><b>Weight</b>: 
+		  	<%= person.get('healthprofile').weight.substring(0,5) + " kg" %>
+		  </p>
+		  <p class="lead human-height">
+		  	<b>Height</b>: <%= person.get('healthprofile').height.substring(0,5) + " m" %>
+		  </p>
+		</div>
+		<div class="span3" style="position:relative;">
+			<div id="preview">
+				<div id="bmi-range" class="gauge-textfield">Normal</div>
+				<canvas id="canvas-preview" ></canvas>
+				<div id="preview-textfield" class="gauge-textfield"></div>
+			</div>
+		</div>
+
+	</div>
+	<br/>
+	
+	<legend>Suggested Recipes</legend>
+	<br/>
+	
+	<a href="#/editPerson/<%= person.get('id') %>/editHealthProfile" class="btn btn-success">
+				<i class="icon-plus icon-white"></i> New Health Profile
+	</a>
+	<br/><br/>
     
-    <% if (healthProfileHistory.length > 0) { %> 
+  <% if (healthProfileHistory.length > 0) { %> 
 
-		<legend>Health Profile History </legend>
+		<legend>Health Profile History</legend>
 
 		<table class="table table-hover striped">
 			<thead>
 				<tr>
-				  <th>#</th>
+					<th>#</th>
 					<th>Weight (kg)</th>
 					<th>Height (m)</th>
 					<th>BMI (kg/m<sup>2</sup>)</th>
@@ -49,50 +73,65 @@
 			</thead>
 			<tbody>
 
-				<% _.each(healthProfileHistory, function(healthProfile, index){ %>
-					<tr>
-						<td><%= index + 1 %></td>
-						
-						<td><%= healthProfile.get('weight') %></td>
-						
-						<td><%= healthProfile.get('height') %></td>
-
-						<td><%= healthProfile.get('bmi') %></td>
-
-						<td><%= healthProfile.get('date').substring(0,10) %></td>
-
-						<td>
-							<a href="#/editPerson/<%= person.get('person_id') %>/editHealthProfile/<%= healthProfile.get('healthprofile_id') %>" class="btn btn-primary">
+			<% _.each(healthProfileHistory, function(healthProfile, index){ %>
+				<tr>
+					<td><%= index + 1 %></td>
+					<td class="hpHistoryWeight"><%= healthProfile.weight %></td>
+					<td class="hpHistoryHeight"><%= healthProfile.height %></td>
+					<td class="hpHistoryBmi">bmi</td>
+					<td><%= healthProfile.date.substring(0,10) %></td>
+					<td>
+						<a href="#/editPerson/<%= person.get('id') %>/editHealthProfile/<%= healthProfile.id %>" 
+							class="btn btn-primary">
 								<i class="icon-edit icon-white"></i> Edit
-							</a>
-						</td>
-						<td><a href="#/editPerson/<%= person.get('person_id') %>/deleteHealthProfile/<%= healthProfile.get('healthprofile_id') %>" class="btn btn-danger"
+						</a>
+					</td>
+					<td>
+						<a href="#/editPerson/<%= person.get('id') %>/deleteHealthProfile/<%= healthProfile.id %>" class="btn btn-danger"
 								onclick="return confirm('Are you sure?')">
-							<i class="icon-trash icon-white"></i> Delete</a>
-						</td>
-
-					</tr>
-
-				<% }) %> 
-
+						<i class="icon-trash icon-white"></i> Delete</a>
+					</td>
+				</tr>
+			<% }) %> 
 			</tbody>
 		</table>
+	<% } %>
+	<br/>
+	<div class="form-actions">
+		<a href="#/editPerson/<%= person.get('id') %>" class="btn btn-primary btn-large">
+			<i class="icon-edit icon-white"></i> Edit Person
+		</a>
+		<a href="#/deletePerson/<%= person.get('id') %>" class="btn btn-danger btn-large"
+				onclick="return confirm('Are you sure?')">
+				<i class="icon-trash icon-white"></i> Delete Person
+		</a>
+	</div>
 
-    <% } %>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			var opts = {
+		  lines: 12, // The number of lines to draw
+		  angle: 0.15, // The length of each line
+		  lineWidth: 0.44, // The line thickness
+		  pointer: {
+		    length: 0.9, // The radius of the inner circle
+		    strokeWidth: 0.035, // The rotation offset
+		    color: '#000000' // Fill color
+		  },
+		  limitMax: 'true',   // If true, the pointer will not go past the end of the gauge
 
-		<br/>
-
-		<div class="form-actions">
-
-			<a href="#/editPerson/<%= person.get('person_id') %>" class="btn btn-primary btn-large">
-				<i class="icon-edit icon-white"></i> Edit Person
-			</a>
-			
-			<a href="#/deletePerson/<%= person.get('person_id') %>" class="btn btn-danger btn-large"
-					onclick="return confirm('Are you sure?')">
-					<i class="icon-trash icon-white"></i> Delete Person
-			</a>
-		
-		</div>
-
+		  colorStart: '#A6C8FF',   // Colors
+		  colorStop: '#cd1717',    // just experiment with them
+		  strokeColor: '#E0E0E0',   // to see which ones work best for you
+		  generateGradient: true
+			};
+			var target = document.getElementById('canvas-preview'); // your canvas element
+			var gauge = new Gauge(target).setOptions(opts); // create sexy gauge!
+			gauge.setTextField(document.getElementById("preview-textfield"));
+			gauge.maxValue = 5000; // set max gauge value
+			gauge.animationSpeed =20; // set animation speed (32 is default value)
+			gauge.set(2200); // set actual value
+		});
 	</script>
+
+</script>
