--- a/WebAppRest/src/main/webapp/template/people-list-template.html
+++ b/WebAppRest/src/main/webapp/template/people-list-template.html
@@ -1,52 +1,55 @@
 <script type="text/template" id="people-list-template"> 
-    <br/>
-    <% if (people.length > 0) { %>
-    
-		<h3>People Found: <%= people.length %></h3>
-		<hr/>
-		<table class="table table-hover striped">
-			<thead>
-				<tr>
-				  <th>#</th>
-					<th>Fullname</th>
-					<th>Weight</th>
-					<th>Height</th>
-					<th>BMI</th>
-					<th>Birthdate</th>
-					<th></th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				<% _.each(people, function(p, index){ %>
+	    <br/>
+	    <% if (people.length > 0) { %>
+	    
+			<h3>People Found: <%= people.length %></h3>
+			<hr/>
+			<table class="table table-hover striped">
+				<thead>
 					<tr>
-					  <td><%= index + 1 %></td>
-						
-						<td><a href="#/showPerson/<%= p.get('person_id') %>">
-							<%= p.get('firstname') + " " + p.get('lastname') %><a/>
-						</td>
-						
-						<td><%= p.get('weight') %></td>
-						<td><%= p.get('height') %></td>
-						<td><%= p.get('bmi') %></td>
-						<td><%= p.get('birthdate') %></td>
-
-						<td>
-							<a href="#/editPerson/<%= p.get('person_id') %>" class="btn btn-primary">
-								<i class="icon-edit icon-white"></i> Edit
-							</a>
-						</td>
-						<td><a href="#/deletePerson/<%= p.get('person_id') %>" class="btn btn-danger"
-								onclick="return confirm('Are you sure?')">
-							<i class="icon-trash icon-white"></i> Delete</a>
-						</td>
+					  <th>#</th>
+						<th>Fullname</th>
+						<th>Gender</th>
+						<th>Birthdate</th>
+						<th>Weight (kg)</th>
+						<th>Height (m)</th>
+						<th></th>
+						<th></th>
 					</tr>
-				<% })%>
-			</tbody>
-		</table>
+				</thead>
+				<tbody>
+					<% _.each(people, function(p, index){ %>
+						<tr>
+						  <td><%= index + 1 %></td>
+							
+							<td><a href="#/showPerson/<%= p.get('id') %>">
+								<%= p.get('firstname') + " " + p.get('lastname') %><a/>
+							</td>
+							<td>
+								<% if (p.get('sex') == 1) { %>
+									<img src="img/male_icon.png" class="gender_icon"/>
+								<% } else { %>
+									<img src="img/female_icon.png" class="gender_icon"/>
+								<% } %>
+							</td>
+							<td><%= p.get('birthdate') %></td>
+							<td><%= p.get('healthprofile').weight %></td>
+							<td><%= p.get('healthprofile').height %></td>
+							<td>
+								<a href="#/editPerson/<%= p.get('id') %>" class="btn btn-primary">
+									<i class="icon-edit icon-white"></i> Edit
+								</a>
+							</td>
+							<td><a href="#/deletePerson/<%= p.get('id') %>" class="btn btn-danger"
+									onclick="return confirm('Are you sure?')">
+								<i class="icon-trash icon-white"></i> Delete</a>
+							</td>
+						</tr>
+					<% })%>
+				</tbody>
+			</table>
 
-    <% } else { %>
-      <h3>No People Found! </h3>
-    <% } %>
-
-</script>
+	    <% } else { %>
+	      <h3>No People Found! </h3>
+	    <% } %>
+		</script>
