--- a/WebAppRest/src/main/webapp/css/bootstrap-overrides.css
+++ b/WebAppRest/src/main/webapp/css/bootstrap-overrides.css
@@ -98,3 +98,10 @@ div.show-gender-icon{
   left: -100px;
   width: 80px;
 }
+
+.circular-slideshow-container{
+  background: #e4ebe9 url(../img/pattern.png);
+  padding-bottom:20px;
+  padding-top:20px;
+  border-radius:5px;
+}
