--- a/WebAppRest/src/main/webapp/template/show-person-template.html
+++ b/WebAppRest/src/main/webapp/template/show-person-template.html
@@ -18,13 +18,32 @@
 	<legend>Current Health Profile</legend>
 	<div class="row-fluid" id="hpinformation">
 		<div class="span4" style="position:relative">
-			<p class="lead"><b>Calories Needed</b>: 2500 kcal
-				<img src="img/fire.png" style="height:30px;margin-bottom: 10px;">
+
+			<p class="lead">
+				<b>Blood Pressure</b>: 80 - 130 mmHg
+				<img src="img/blood-pressure.png" style="height:35px;"/>
 			</p>
+			<p class="lead"><b>Heart Rate</b>: 80 bpm
+				<img src="img/heart_beat.png" style="height:25px;"/>
+			</p>
+			<p class="lead">
+				<b>Target Heart Rate</b>: 160 bpm
+				<img src="img/heart_beat.png" style="height:25px;"/>
+			</p>
+
 			<hr/>
-			<p class="lead"><b>BMR</b>: 1500 kcal</p>
+
+			<p class="lead"><b>Calories Needed</b>: 2500 kcal
+				<img src="img/fire.png" style="height:30px;"/>
+			</p>
+			<p class="lead"><b>BMR</b>: 1500 kcal
+				<img src="img/fire.png" style="height:30px;"/>
+			</p>
+
+			<hr/>
 			<p class="lead"><b>Ideal Weight</b>:  50kg</p>
-			<p class="lead"><b>Ideal Bmi</b>: 21.5 kg/m<sup>2</sup> </p>
+			<p class="lead"><b>Ideal Bmi</b>: 21.5 kg/m<sup>2</sup></p>
+
 		</div>
 		<div class="span1"></div>
 		<div class="span4" style="position:relative;">
@@ -48,16 +67,163 @@
 	<br/>
 	
 	<legend>Suggested Recipes</legend>
+
+	<div class="circular-slideshow-container">
+	<div id="ca-container" class="ca-container">
+				<div class="ca-wrapper">
+					<div class="ca-item ca-item-1">
+						<div class="ca-item-main">
+							<img src="img/animals/animal1.png" class="ca-icon"/>
+							<h3>Stop factory farming</h3>
+							<h4>
+								<span class="ca-quote">&ldquo;</span>
+								<span>The greatness of a nation and its moral progress can be judged by the way in which its animals are treated.</span>
+							</h4>
+								<a href="#" class="ca-more">more...</a>
+						</div>
+						<div class="ca-content-wrapper">
+							<div class="ca-content">
+								<h6>Animals are not commodities</h6>
+								<a href="#" class="ca-close">close</a>
+								<div class="ca-content-text">
+									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
+									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
+									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+								</div>
+								<ul>
+									<li><a href="#">Read more</a></li>
+									<li><a href="#">Share this</a></li>
+									<li><a href="#">Become a member</a></li>
+									<li><a href="#">Donate</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="ca-item ca-item-2">
+						<div class="ca-item-main">
+							<img src="img/animals/animal2.png" class="ca-icon"/>
+							<h3>Respect Life &amp; Rights</h3>
+							<h4>
+								<span class="ca-quote">&ldquo;</span>
+								<span>I hold that the more helpless a creature, the more entitled it is to protection by man from the cruelty of man.</span>
+							</h4>
+								<a href="#" class="ca-more">more...</a>
+						</div>
+						<div class="ca-content-wrapper">
+							<div class="ca-content">
+								<h6>Would you eat your dog?</h6>
+								<a href="#" class="ca-close">close</a>
+								<div class="ca-content-text">
+									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
+									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
+									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+								</div>
+								<ul>
+									<li><a href="#">Read more</a></li>
+									<li><a href="#">Share this</a></li>
+									<li><a href="#">Become a member</a></li>
+									<li><a href="#">Donate</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="ca-item ca-item-3">
+						<div class="ca-item-main">
+							<img src="img/animals/animal3.png" class="ca-icon"/>
+							<h3>Become 100% meat-free</h3>
+							<h4>
+								<span class="ca-quote">&ldquo;</span>
+								<span>I feel that spiritual progress does demand at some stage that we should cease to kill our fellow creatures for the satisfaction of our bodily wants.</span>
+							</h4>
+								<a href="#" class="ca-more">more...</a>
+						</div>
+						<div class="ca-content-wrapper">
+							<div class="ca-content">
+								<h6>You can change the world</h6>
+								<a href="#" class="ca-close">close</a>
+								<div class="ca-content-text">
+									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
+									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
+									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+								</div>
+								<ul>
+									<li><a href="#">Read more</a></li>
+									<li><a href="#">Share this</a></li>
+									<li><a href="#">Become a member</a></li>
+									<li><a href="#">Donate</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="ca-item ca-item-4">
+						<div class="ca-item-main">
+							<img src="img/animals/animal4.png" class="ca-icon"/>
+							<h3>Make a difference</h3>
+							<h4>
+								<span class="ca-quote">&ldquo;</span>
+								<span>A man is but the product of his thoughts what he thinks, he becomes.</span>
+							</h4>
+								<a href="#" class="ca-more">more...</a>
+						</div>
+						<div class="ca-content-wrapper">
+							<div class="ca-content">
+								<h6>Think globally, act locally</h6>
+								<a href="#" class="ca-close">close</a>
+								<div class="ca-content-text">
+									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
+									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
+									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+								</div>
+								<ul>
+									<li><a href="#">Read more</a></li>
+									<li><a href="#">Share this</a></li>
+									<li><a href="#">Become a member</a></li>
+									<li><a href="#">Donate</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="ca-item ca-item-5">
+						<div class="ca-item-main">
+							<img src="img/animals/animal5.png" class="ca-icon"/>
+							<h3>Say no to killing</h3>
+							<h4>
+								<span class="ca-quote">&ldquo;</span>
+								<span>A weak man is just by accident. A strong but non-violent man is unjust by accident.</span>
+							</h4>
+								<a href="#" class="ca-more">more...</a>
+						</div>
+						<div class="ca-content-wrapper">
+							<div class="ca-content">
+								<h6>Animals have rights, too!</h6>
+								<a href="#" class="ca-close">close</a>
+								<div class="ca-content-text">
+									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
+									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
+									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+								</div>
+								<ul>
+									<li><a href="#">Read more</a></li>
+									<li><a href="#">Share this</a></li>
+									<li><a href="#">Become a member</a></li>
+									<li><a href="#">Donate</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	<br/>
 	
+	<br/>
+	<legend>Health Profile History</legend>
 	<a href="#/editPerson/<%= person.get('id') %>/editHealthProfile" class="btn btn-success">
 				<i class="icon-plus icon-white"></i> New Health Profile
 	</a>
 	<br/><br/>
     
   <% if (healthProfileHistory.length > 0) { %> 
-
-		<legend>Health Profile History</legend>
 
 		<table class="table table-hover striped">
 			<thead>
@@ -109,6 +275,9 @@
 
 	<script type="text/javascript">
 		$(document).ready(function(){
+			$('#ca-container').contentcarousel();
+
+
 			var opts = {
 		  lines: 12, // The number of lines to draw
 		  angle: 0.15, // The length of each line
