added Project Runner

--- a/WebAppRest/src/main/webapp/template/new-person-template.html
+++ b/WebAppRest/src/main/webapp/template/new-person-template.html
@@ -37,7 +37,7 @@
   		<div class="control-group">
 				<label class="control-label" for="selectGender">Gender</label>
 				<div class="controls">
-					<select name="gender" id="selectGender">
+					<select name="sex" id="selectGender">
 					  <option value=1>Male</option>
 					  <option value=0>Female</option>
 					</select>
@@ -47,15 +47,15 @@
 			<div class="control-group">
 				<label class="control-label" for="selectLifeStyle">Life Style</label>
 				<div class="controls">
-					<select name="lifestyle" id="selectLifeStyle">
+					<select name="exerciseTimesPerWeek" id="selectLifeStyle">
 					  <option value=0>Sedentary (No Exercise)</option>
-					  <option value=3>Lightly Active (Exercise / Sports 1-3 Times / Week)</option>
-					  <option value=5>
-					  	Moderatetely Active (Hard Exercise / Sports 6-7 Times / Week)
-					  </option>
-					  <option value=8>
-					  	Extra Active (Very Hard Exercise / Sports or Physical Job)
-					  </option>
+					  <option value=1>Very Lightly Active (1 Exercise / Sports per Week)</option>
+					  <option value=2>Lightly Active (2 Exercise / Sports per Week)</option>
+					  <option value=4>Moderatetely Active (4 Exercise / Sports per Week)</option>
+					  <option value=3>Active (3 Exercise / Sports per Week)</option>
+					  <option value=5>Very Active (5 Exercise / Sports per Week)</option>
+					  <option value=6>Very Very Active (6 Exercise / Sports per Week)</option>
+					  <option value=7>Extremely Active (7 Exercise / Sports per Week)</option>
 					</select>
 				</div>
 			</div>
