--- a/WebAppRest/src/main/webapp/template/show-person-template.html
+++ b/WebAppRest/src/main/webapp/template/show-person-template.html
@@ -20,8 +20,8 @@
 		<div class="span4" style="position:relative">
 
 			<p class="lead">
-				<b>Blood Pressure</b>: 
-					<%= healthProfile.minbloodpressure+" - "+healthProfile.maxbloodpressure %> mmHg
+				<b>Blood Pressure</b> 
+					min: <%= healthProfile.minbloodpressure+" max: "+healthProfile.maxbloodpressure %> mmHg
 					<img src="img/blood-pressure.png" style="height:35px;"/>
 			</p>
 			<p class="lead"><b>Heart Rate</b>: <%= healthProfile.heartrate %> bpm
@@ -232,7 +232,6 @@
 					<th>#</th>
 					<th>Weight (kg)</th>
 					<th>Height (m)</th>
-					<th>BMI (kg/m<sup>2</sup>)</th>
 					<th>Date</th>
 					<th></th>
 					<th></th>
@@ -245,7 +244,6 @@
 					<td><%= index + 1 %></td>
 					<td class="hpHistoryWeight"><%= healthProfile.weight %></td>
 					<td class="hpHistoryHeight"><%= healthProfile.height %></td>
-					<td class="hpHistoryBmi">bmi</td>
 					<td><%= healthProfile.date.substring(0,10) %></td>
 					<td>
 						<a href="#/editPerson/<%= person.get('id') %>/editHealthProfile/<%= healthProfile.id %>" 
