--- a/WebAppRest/src/main/webapp/css/bootstrap-overrides.css
+++ b/WebAppRest/src/main/webapp/css/bootstrap-overrides.css
@@ -64,6 +64,7 @@ div.gauge-textfield{
   /*top: 35px; left: 0; right: 0;*/
   text-align: center; font-size: 2em; font-weight: bold;
   color: black; font-family: 'Amaranth', sans-serif;
+  display: inline;
 }
 
 #preview {
