--- a/WebAppRest/src/main/webapp/css/circular-carousel.css
+++ b/WebAppRest/src/main/webapp/css/circular-carousel.css
@@ -126,13 +126,14 @@
 }
 .ca-content h6{
 	margin:25px 20px 0px 35px;
-	font-size:32px;
+	font-size:26px;
 	padding-bottom:5px;
 	color:#000;
 	font-family: 'Coustard', sans-serif;
 	color:#60817a;
 	border-bottom:2px solid #99bcb4;
 	text-shadow: 1px 1px 1px #99BCB4;
+	letter-spacing: 3px;
 }
 .ca-content ul{
 	margin:20px 35px;
