--- a/WebAppRest/src/main/webapp/template/show-person-template.html
+++ b/WebAppRest/src/main/webapp/template/show-person-template.html
@@ -58,9 +58,12 @@
 		</div>
 		<div class="span3" style="position:relative;">
 			<div id="preview">
-				<div id="bmi-range" class="gauge-textfield">Normal</div>
-				<canvas id="canvas-preview" ></canvas>
-				<div id="preview-textfield" class="gauge-textfield"></div>
+				<center>
+					<div id="bmi-range" class="gauge-textfield"><%= healthProfile.bmiLabel %></div>
+					<canvas id="canvas-preview" ></canvas>
+					<div class="gauge-textfield">Bmi </div>
+					<div id="preview-textfield" class="gauge-textfield"></div>
+				</center>
 			</div>
 		</div>
 
@@ -71,12 +74,19 @@
 
 	<div class="circular-slideshow-container">
 	<div id="ca-container" class="ca-container">
-				<div class="ca-wrapper">
-					<div class="ca-item ca-item-1">
+		<div class="ca-wrapper">
+
+				<% _.each(recipes, function(recipe){ %>
+
+					<div class="ca-item">
 						<div class="ca-item-main">
-							<img src="img/animals/animal1.png" class="ca-icon"/>
-							<h3>Stop factory farming</h3>
-							<h4>
+							<img src="<%= recipe.get('smallImageUrls')[2]%>" class="ca-icon"/>
+							<% if (recipe.get('recipeName').length > 40) { %> 
+								<h3><%= recipe.get('recipeName').substring(0,40) %>...</h3>
+							<% } else { %>
+								<h3><%= recipe.get('recipeName') %></h3>
+							<% } %>
+							<h4 style="display:none;">
 								<span class="ca-quote">&ldquo;</span>
 								<span>The greatness of a nation and its moral progress can be judged by the way in which its animals are treated.</span>
 							</h4>
@@ -84,134 +94,16 @@
 						</div>
 						<div class="ca-content-wrapper">
 							<div class="ca-content">
-								<h6>Animals are not commodities</h6>
+								<h6><%= recipe.get('recipeName') %></h6>
 								<a href="#" class="ca-close">close</a>
 								<div class="ca-content-text">
-									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
-									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
-									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+									<p>Ingredienti vari</p>
 								</div>
-								<ul>
-									<li><a href="#">Read more</a></li>
-									<li><a href="#">Share this</a></li>
-									<li><a href="#">Become a member</a></li>
-									<li><a href="#">Donate</a></li>
-								</ul>
 							</div>
 						</div>
 					</div>
-					<div class="ca-item ca-item-2">
-						<div class="ca-item-main">
-							<img src="img/animals/animal2.png" class="ca-icon"/>
-							<h3>Respect Life &amp; Rights</h3>
-							<h4>
-								<span class="ca-quote">&ldquo;</span>
-								<span>I hold that the more helpless a creature, the more entitled it is to protection by man from the cruelty of man.</span>
-							</h4>
-								<a href="#" class="ca-more">more...</a>
-						</div>
-						<div class="ca-content-wrapper">
-							<div class="ca-content">
-								<h6>Would you eat your dog?</h6>
-								<a href="#" class="ca-close">close</a>
-								<div class="ca-content-text">
-									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
-									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
-									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-								</div>
-								<ul>
-									<li><a href="#">Read more</a></li>
-									<li><a href="#">Share this</a></li>
-									<li><a href="#">Become a member</a></li>
-									<li><a href="#">Donate</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="ca-item ca-item-3">
-						<div class="ca-item-main">
-							<img src="img/animals/animal3.png" class="ca-icon"/>
-							<h3>Become 100% meat-free</h3>
-							<h4>
-								<span class="ca-quote">&ldquo;</span>
-								<span>I feel that spiritual progress does demand at some stage that we should cease to kill our fellow creatures for the satisfaction of our bodily wants.</span>
-							</h4>
-								<a href="#" class="ca-more">more...</a>
-						</div>
-						<div class="ca-content-wrapper">
-							<div class="ca-content">
-								<h6>You can change the world</h6>
-								<a href="#" class="ca-close">close</a>
-								<div class="ca-content-text">
-									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
-									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
-									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-								</div>
-								<ul>
-									<li><a href="#">Read more</a></li>
-									<li><a href="#">Share this</a></li>
-									<li><a href="#">Become a member</a></li>
-									<li><a href="#">Donate</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="ca-item ca-item-4">
-						<div class="ca-item-main">
-							<img src="img/animals/animal4.png" class="ca-icon"/>
-							<h3>Make a difference</h3>
-							<h4>
-								<span class="ca-quote">&ldquo;</span>
-								<span>A man is but the product of his thoughts what he thinks, he becomes.</span>
-							</h4>
-								<a href="#" class="ca-more">more...</a>
-						</div>
-						<div class="ca-content-wrapper">
-							<div class="ca-content">
-								<h6>Think globally, act locally</h6>
-								<a href="#" class="ca-close">close</a>
-								<div class="ca-content-text">
-									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
-									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
-									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-								</div>
-								<ul>
-									<li><a href="#">Read more</a></li>
-									<li><a href="#">Share this</a></li>
-									<li><a href="#">Become a member</a></li>
-									<li><a href="#">Donate</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="ca-item ca-item-5">
-						<div class="ca-item-main">
-							<img src="img/animals/animal5.png" class="ca-icon"/>
-							<h3>Say no to killing</h3>
-							<h4>
-								<span class="ca-quote">&ldquo;</span>
-								<span>A weak man is just by accident. A strong but non-violent man is unjust by accident.</span>
-							</h4>
-								<a href="#" class="ca-more">more...</a>
-						</div>
-						<div class="ca-content-wrapper">
-							<div class="ca-content">
-								<h6>Animals have rights, too!</h6>
-								<a href="#" class="ca-close">close</a>
-								<div class="ca-content-text">
-									<p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
-									<p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;</p>
-									<p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-								</div>
-								<ul>
-									<li><a href="#">Read more</a></li>
-									<li><a href="#">Share this</a></li>
-									<li><a href="#">Become a member</a></li>
-									<li><a href="#">Donate</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
+
+			<% }) %>
 				</div>
 			</div>
 		</div>
@@ -296,9 +188,9 @@
 			var target = document.getElementById('canvas-preview'); // your canvas element
 			var gauge = new Gauge(target).setOptions(opts); // create sexy gauge!
 			gauge.setTextField(document.getElementById("preview-textfield"));
-			gauge.maxValue = 5000; // set max gauge value
-			gauge.animationSpeed =20; // set animation speed (32 is default value)
-			gauge.set(2200); // set actual value
+			gauge.maxValue = 40.05; // set max gauge value
+			gauge.animationSpeed = 15; // set animation speed (32 is default value)
+			gauge.set(<%= healthProfile.bmi %>); // set actual value
 		});
 	</script>
 
