--- a/WebAppRest/src/main/webapp/template/people-list-template.html
+++ b/WebAppRest/src/main/webapp/template/people-list-template.html
@@ -33,8 +33,8 @@
 								<% } %>
 							</td>
 							<td><%= p.get('birthdate') %></td>
-							<td><%= p.get('healthprofile').weight %></td>
-							<td><%= p.get('healthprofile').height %></td>
+							<td><%= p.get('healthprofile') ? p.get('healthprofile').weight : "" %></td>
+							<td><%= p.get('healthprofile') ? p.get('healthprofile').height : "" %></td>
 							<td>
 								<a href="#/editPerson/<%= p.get('id') %>" class="btn btn-primary">
 									<i class="icon-edit icon-white"></i> Edit
