add goals to wikiparser

--- a/WebAppRest/src/main/webapp/template/show-person-food-template.html
+++ b/WebAppRest/src/main/webapp/template/show-person-food-template.html
@@ -88,7 +88,19 @@
 		</div>
 	<br/>
 
-	<legend></legend>
+	<legend>Favourite Foods</legend>
+	<a href="#/editPerson/<%= person.get('id') %>/editHealthProfile" 
+			class="btn btn-success">
+		<i class="icon-plus icon-white"></i> New Favourite Food
+	</a>
+	<br/>
+
+	<legend>Favourite Foods</legend>
+	<a href="#/editPerson/<%= person.get('id') %>/editHealthProfile" 
+			class="btn btn-success">
+		<i class="icon-plus icon-white"></i> New Favourite Food
+	</a>
+	<br/>
 
 	<script type="text/javascript">
 	  $(document).ready(function(){
