--- a/WebAppRest/src/main/webapp/template/show-person-goal-template.html
+++ b/WebAppRest/src/main/webapp/template/show-person-goal-template.html
@@ -35,10 +35,21 @@
 
 	<hr/>
 
-	<a href="#setGoalsModal" role="button" class="btn btn-primary btn-large" 
-			data-toggle="modal">
-			<i class="icon-tasks icon-white"></i> Set Goals
-	</a>
+	<div class="row-fluid">
+		<div class="span8">
+			<a href="#setGoalsModal" role="button" class="btn btn-primary btn-large" 
+				data-toggle="modal">
+				<i class="icon-tasks icon-white"></i> Set Goals
+			</a>
+		</div>
+		<div class="span4" style="position:relative;">
+			<div class="speaking-container"></div>
+			<img src="img/speech-bubble.png" id="speech-bubble"/>
+			<img src="img/public-speaking.png" id="public-speaking"/>
+			<div id="quote"><%= quote %></div>
+		</div>
+	</div>
+
 
 	<div id="setGoalsModal" class="modal hide fade" tabindex="-1" role="dialog" 
 				aria-labelledby="setGoalsModalLabel" aria-hidden="true">
@@ -74,4 +85,38 @@
 	  </form>
 	</div>
 
+	<style>
+		#speech-bubble{
+			width: 90%;
+			position: absolute;
+			top: 20px;
+			left: -170px;
+			z-index: 2;
+		}
+		#public-speaking{
+			position:absolute;
+			top: 170px;
+			left: 130px;
+			z-index: 1;
+		}
+		#quote{
+			position: absolute;
+			top: 70px;
+			left: -120px;
+			width: 60%;
+			font-size:22px;
+			font-style: italic;
+			font-family: serif;
+			z-index: 999999999;
+		}
+		.speaking-container{
+			background-color: #f4f4f4;
+			height:500px;
+			width:150%;
+			position : absolute;
+			left: -185px;
+			border-radius:10px;
+			background: #e4ebe9 url(img/pattern.png);
+		}
+	</style>
 </script>
